--- a/src/java/sample.properties
+++ b/src/java/sample.properties
@@ -50,6 +50,10 @@ ice.monthlycachesize=12
 # a short alert or notice to place in the header of the dashboard pages
 ice.notice=
 
+# enable reader to set reprocess flags and start processor
+ice.enableReprocessRequests=false
+
+
 #
 #
 # Processor configuration items
