--- a/src/java/sample.properties
+++ b/src/java/sample.properties
@@ -106,8 +106,11 @@ ice.billing_payerAccountId=123456789012,234567890123
 #ice.billing_accessExternalId=
 # root name for organization used in account parents path. If not set, a root name is not given. Most useful with multiple payer accounts.
 #ice.rootName=Org1,Org2
-# custom billing config file basenames can be specified to override the default "ice_config" basename. This is useful if you run multiple stacks or need to test with different configs
-#ice.billingConfigBasename=ice_config,ice_config
+
+# custom billing config file basenames can be specified to override the default "ice_accounts", "ice_tags", and "ice_postproc" basenames. This is useful if you run multiple stacks or need to test with different configs
+#ice.billingConfigAccountsBasename=ice_accounts_v1,ice_accounts_v1
+#ice.billingConfigTagsBasename=ice_tags_v1,ice_tags_v1
+#ice.billingConfigPostProcBasename=ice_postproc_v1,ice_postproc_v1
 
 # use blended rates and cost if set to true, otherwise use unblended
 ice.use_blended=
