Added property for report sub-prefix to isolate multiple processors from overwriting each other's reports.

--- a/src/java/sample.properties
+++ b/src/java/sample.properties
@@ -84,6 +84,11 @@ ice.writeJsonFiles=
 # enable tag coverage metrics: none, basic, withUserTags - uses more memory
 ice.tagCoverage=none
 
+# post processor report sub-prefix - all report S3 keys will have this value inserted
+# between the bucket prefix and filename if a value is specified. 
+# Can be used to keep separate processor instances from writing over each other.
+#ice.reportSubPrefix=
+
 # default reservation period, possible values are oneyear, threeyear
 ice.reservationPeriod=oneyear
 # default reservation purchase option, possible values are AllUpfront, PartialUpfront, and NoUpfront.
