Add Parquet file writer.

--- a/src/java/sample.properties
+++ b/src/java/sample.properties
@@ -81,6 +81,9 @@ ice.reservationCapacityPoller=false
 # multiple formats can be specified separated by ","
 ice.writeJsonFiles=
 
+# whether or not to create data files that can be imported into other services such as Athena
+ice.writeParquetFiles=false
+
 # enable tag coverage metrics: none, basic, withUserTags - uses more memory
 ice.tagCoverage=none
 
