--- a/src/java/sample.properties
+++ b/src/java/sample.properties
@@ -142,8 +142,11 @@ ice.edpDiscounts=2019-01:5
 #ice.customTags=tag1,tag2
 
 # specify if you want an additional computed tag for the Reserved Instance or Savings Plan ID
-# included with the cost or usage item. The additional tag key is "RI/SP ID"
+# included with the cost or usage item. The additional tag key is "RI_SP_ID"
 ice.reservationIdTags=false
+
+# specify name of cloudwatch SDK metrics to push
+#ice.debug.sdkMetrics=ice-processor
 
 #
 # The following settings are specified in the in the billing data folder as ice_config.json or ice_config.yaml
