Skip zero-valued items on output of post processor reports. Add config setting to skip zero cost line items.

--- a/src/java/sample.properties
+++ b/src/java/sample.properties
@@ -123,6 +123,10 @@ ice.billing_payerAccountId=123456789012,234567890123
 # use blended rates and cost if set to true, otherwise use unblended
 ice.use_blended=
 
+# include line items that have zero cost, otherwise ignore. DataTransfer -IN- operations are always ignored due to their high volume.
+# Reservation and savings plan usage of upfront fees are always included.
+ice.includeZeroCostUsage=
+
 # Enterprise Discount Program
 # On Jan. 1, 2019 AWS starting exposing Net Unblended Rate and Cost for some customers in their Cost and Usage Reports.
 # The following flag controls when to switch to using NetUnblended values for rate and cost calculations.
