Change boolean includeZeroCostUsage property to list of product codes to include.

--- a/src/java/sample.properties
+++ b/src/java/sample.properties
@@ -120,9 +120,10 @@ ice.billing_payerAccountId=123456789012,234567890123
 # use blended rates and cost if set to true, otherwise use unblended
 ice.use_blended=
 
-# include line items that have zero cost, otherwise ignore. DataTransfer -IN- operations are always ignored due to their high volume.
-# Reservation and savings plan usage of upfront fees are always included.
-ice.includeZeroCostUsage=
+# include line items that have zero cost if the product code for that line item is included in the comma delimited list, otherwise ignore.
+# DataTransfer -IN- operations are always ignored due to their high volume.
+# "all" may be used to include all zero-cost usage (except for the above mentioned DataTransfer -IN- operations
+ice.includeZeroCostUsageForProducts=
 
 # Enterprise Discount Program
 # On Jan. 1, 2019 AWS starting exposing Net Unblended Rate and Cost for some customers in their Cost and Usage Reports.
